--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,6 +2,12 @@ plugins {
     id 'com.android.application'
 }
 
+allprojects {
+    tasks.withType(JavaCompile) {
+        options.compilerArgs << "-Xlint:unchecked" << "-Xlint:deprecation"
+    }
+}
+
 android {
     compileSdkVersion 30
     buildToolsVersion "30.0.2"
