--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,21 +9,26 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.AppCompat.Light.NoActionBar">
+        <activity android:name=".help_4"></activity>
+        <activity android:name=".help_3" />
+        <activity
+            android:name=".help_2"
+            android:screenOrientation="landscape" />
+        <activity
+            android:name=".help_1"
+            android:screenOrientation="landscape" />
         <activity
             android:name=".Help_popup"
             android:screenOrientation="landscape"
-            android:theme="@style/AppTheme.Temapopup">
-        </activity>
+            android:theme="@style/AppTheme.Temapopup" />
         <activity
             android:name=".info_popup"
             android:screenOrientation="landscape"
-            android:theme="@style/AppTheme.Temapopup">
-        </activity>
+            android:theme="@style/AppTheme.Temapopup" />
         <activity
             android:name=".ajustes_popup"
             android:screenOrientation="landscape"
-            android:theme="@style/AppTheme.Temapopup">
-        </activity>
+            android:theme="@style/AppTheme.Temapopup" />
         <activity
             android:name=".SelectVirusActivity"
             android:screenOrientation="landscape" />
