--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,8 +9,13 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.AppCompat.Light.NoActionBar">
-        <activity android:name=".help_4"></activity>
-        <activity android:name=".help_3" />
+        <activity
+            android:name=".help_4"
+            android:screenOrientation="landscape" >
+        </activity>
+        <activity
+            android:name=".help_3"
+            android:screenOrientation="landscape" />
         <activity
             android:name=".help_2"
             android:screenOrientation="landscape" />
